# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

* rc-scripts 1.3.8 (08 Aug 2002)

   7 Aug 2002; Martin Schlemmer <azarah@gentoo.org>:

     Move the color ls stuff to .bashrc.  Fix bug #5250.

   6 Aug 2002; Dan Armak <danarmak@gentoo.org>:
   
    Correct the comments in rc.conf about the XSESSION variable: it should
    be set to "kde-<version>" not "KDE". Closes bug #5948.

   5 Aug 2002; Martin Schlemmer <azarah@gentoo.org>:

     Fix the 'Usage' line in the help to return the correct options for
     the script (/sbin/runscript.sh).  Resolve bug #6029.

   3 Aug 2002; Donny Davies <woodchip@gentoo.org>:

    Added UPS shutdown support for nut to halt.sh.
    Added nut user/group as uid/gid 84.

  27 Jul 2002; Martin Schlemmer <azarah@gentoo.org>:

    Updated /sbin/rc's way of checking for devfs support (now rather uses
    awk, as it is more accurate).  Closes bug #5458.

    Add the Redhat/Mandrake /forcefsck and /fastboot options to our checkroot
    and checkfs.  Updated /etc/init.d/{checkroot,checkfs,halt.sh} for this.
    Thanks goes to Chris PeBenito (bug #5570).

    Changed most daemons to use /bin/false as shell.  Should close bug #5388.

  27 Jul 2002; Nicholas Jones <carpaski@gentoo.org>:
    
    Added vpopmail user and group as 89:89

  22 Jul 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add the cyrus user to /etc/passwd.  Resolves bug #4100.

    Some bugfixes and speed improvements to /sbin/depscan.sh after
    last changes.

    Replace some cat/grep's in /sbin/rc-envupdate.sh with awk's to
    get some speed improvements.

  21 Jul 2002; Martin Schlemmer <azarah@gentoo.org>:

    Fix LVM support in /etc/init.d/checkfs again, thanks to help from
    Kyle Manna <nitro@gentoo.org>.

    Add software RAID support to /etc/init.d/checkfs, thanks to
    Daniel Ahlberg <aliz@gentoo.org>.
