@@ -2,6 +2,12 @@
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
 # Written by Daniel Robbins (drobbins@gentoo.org)
 
+    11 Aug 2002; Martin Schlemmer <azarah@gentoo.org>:
+
+      Change the 'cat' in check_rcscript() to a single 'awk' in
+      /sbin/depscan.sh.  This should fix broken pipe issues if the
+      loop exists too early.  Resolves bug #5961.
+
 * rc-scripts 1.3.8 (08 Aug 2002)
 
    7 Aug 2002; Martin Schlemmer <azarah@gentoo.org>:
